--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ringcentral/sdk": "^4.0.0",
     "dotenv": "^8.2.0",
+    "node-localstorage": "^2.1.5",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   }
