--- a/package.json
+++ b/package.json
@@ -9,9 +9,10 @@
   "author": "John Celoria john.celoria@ringcentral.com",
   "license": "ISC",
   "dependencies": {
-    "@ringcentral/sdk": "^4.0.0",
+    "@ringcentral/sdk": "^4.1.0",
+    "@ringcentral/subscriptions": "^4.1.0",
     "dotenv": "^8.2.0",
-    "node-localstorage": "^2.1.5",
+    "node-localstorage": "^2.1.6",
     "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2"
   }
