--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@ringcentral/sdk": "^4.1.0",
     "@ringcentral/subscriptions": "^4.1.0",
     "dotenv": "^8.2.0",
+    "log4js": "^6.3.0",
     "node-localstorage": "^2.1.6",
-    "winston": "^3.2.1",
     "winston-daily-rotate-file": "^4.4.2",
     "xlsx": "^0.16.5"
   }
