--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@ringcentral/subscriptions": "^4.1.0",
     "dotenv": "^8.2.0",
     "log4js": "^6.3.0",
+    "moment": "^2.29.1",
     "node-localstorage": "^2.1.6",
     "winston-daily-rotate-file": "^4.4.2",
     "xlsx": "^0.16.5"
